<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kennedy.mydroidcafe.MainActivity">
    <item
        android:id="@+id/action_Specials"
        android:orderInCategory="100"
        android:title="@string/specials"
        app:showAsAction= "never" />
    <item
        android:id="@+id/action_offers"
        android:orderInCategory="100"
        android:title="@string/offers"
        app:showAsAction= "never" />
    <item
        android:id="@+id/action_call_us"
        android:orderInCategory="2"
        android:title="@string/callus"
        android:icon="@drawable/ic_phone_black_24dp"
        app:showAsAction= "ifRoom" />
    <item
        android:id="@+id/action_location"
        android:orderInCategory="1"
        android:title="@string/location"
        android:icon="@drawable/ic_add_location"
        app:showAsAction= "ifRoom" />
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="4"
        android:title="@string/about_us"
        app:showAsAction= "never" />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="1"
        android:title="@string/status"
        app:showAsAction= "never" />
    <item
        android:id="@+id/action_order"
        android:orderInCategory="3"
        android:title="@string/orders"
        app:showAsAction= "ifRoom" />

</menu>
