<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/text_DroidCafe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Heading_DroidCafe"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/headings_main"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/choose_Dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_dessert"
        app:layout_constraintTop_toBottomOf="@+id/text_DroidCafe"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/chooseColor"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        />
    <ImageView
        android:id="@+id/doughnut_imgView"
        android:layout_width="150dp"
        android:onClick="showDougnutMessage"
        android:layout_height="150dp"
        android:src="@drawable/doughnut2"
        app:layout_constraintTop_toBottomOf="@+id/choose_Dessert"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desc_Doughnut" />
    <TextView
        android:id="@+id/text_DescDougnut"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/desc_Doughnut"
        android:textStyle="italic"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/choose_Dessert"
        app:layout_constraintBottom_toBottomOf="@+id/doughnut_imgView"
        app:layout_constraintLeft_toRightOf="@+id/doughnut_imgView"

        />
    <ImageView
        android:id="@+id/froyo_ImgView"
        android:layout_width="150dp"
        android:onClick="showFroyoMessage"
        android:layout_height="150dp"
        android:src="@drawable/froyo1"
        app:layout_constraintTop_toBottomOf="@id/doughnut_imgView"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/Froyo_Desc"
        />
    <TextView
        android:id="@+id/Froyo_descTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Froyo_Desc"
        android:textStyle="italic"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/text_DescDougnut"
        app:layout_constraintBottom_toBottomOf="@+id/froyo_ImgView"
        app:layout_constraintLeft_toRightOf="@+id/froyo_ImgView" />
    <ImageView
        android:id="@+id/IceCream_imgView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:onClick="showIcecreamMessage"
        android:src="@drawable/dessert_1"
        app:layout_constraintTop_toBottomOf="@+id/froyo_ImgView"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desc_Doughnut" />
    <TextView
        android:id="@+id/text_DescIceCream"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/desc_iceCream"
        android:textStyle="italic"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/Froyo_descTextView"
        app:layout_constraintBottom_toBottomOf="@+id/IceCream_imgView"
        app:layout_constraintLeft_toRightOf="@+id/IceCream_imgView"

        />

</androidx.constraintlayout.widget.ConstraintLayout>